compiler.output
Terminals unused in grammar

    OPEN_BRACKETS
    CLOSE_BRACKETS
    ASSIGNMENT
    LABEL
    TYPE
    ARRAY
    OF
    PROCEDURE
    FUNCTION
    GOTO
    IF
    THEN
    ELSE
    NOT
    OR
    AND
    WHILE
    DO
    INTDIV


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: %empty

    7 var: $@3 VAR declara_vars
    8    | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: %empty

   12 $@5: %empty

   13 declara_var: $@4 lista_id_var COLON tipo $@5 SEMICOLON

   14 tipo: IDENTIFIER

   15 lista_id_var: lista_id_var COMMA IDENTIFIER
   16             | IDENTIFIER

   17 lista_idents: lista_idents COMMA IDENTIFIER
   18             | IDENTIFIER

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    OPEN_PARENTHESIS (259) 2
    CLOSE_PARENTHESIS (260) 2
    OPEN_BRACKETS (261)
    CLOSE_BRACKETS (262)
    COMMA (263) 15 17
    SEMICOLON (264) 2 13
    COLON (265) 13
    DOT (266) 2
    T_BEGIN (267) 19
    T_END (268) 19
    VAR (269) 7
    IDENTIFIER (270) 2 14 15 16 17 18
    ASSIGNMENT (271)
    LABEL (272)
    TYPE (273)
    ARRAY (274)
    OF (275)
    PROCEDURE (276)
    FUNCTION (277)
    GOTO (278)
    IF (279)
    THEN (280)
    ELSE (281)
    NOT (282)
    OR (283)
    AND (284)
    WHILE (285)
    DO (286)
    INTDIV (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    programa (34)
        on left: 2
        on right: 0
    $@1 (35)
        on left: 1
        on right: 2
    bloco (36)
        on left: 4
        on right: 2
    $@2 (37)
        on left: 3
        on right: 4
    parte_declara_vars (38)
        on left: 5
        on right: 4
    var (39)
        on left: 7 8
        on right: 5
    $@3 (40)
        on left: 6
        on right: 7
    declara_vars (41)
        on left: 9 10
        on right: 7 9
    declara_var (42)
        on left: 13
        on right: 9 10
    $@4 (43)
        on left: 11
        on right: 13
    $@5 (44)
        on left: 12
        on right: 13
    tipo (45)
        on left: 14
        on right: 13
    lista_id_var (46)
        on left: 15 16
        on right: 13 15
    lista_idents (47)
        on left: 17 18
        on right: 2 17
    comando_composto (48)
        on left: 19
        on right: 4
    comandos (49)
        on left: 20
        on right: 19


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 . PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    2 programa: $@1 PROGRAM . IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT

    IDENTIFIER  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENTIFIER . OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT

    OPEN_PARENTHESIS  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS . lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT

    IDENTIFIER  shift, and go to state 7

    lista_idents  go to state 8


State 7

   18 lista_idents: IDENTIFIER .

    $default  reduce using rule 18 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents . CLOSE_PARENTHESIS SEMICOLON bloco DOT
   17 lista_idents: lista_idents . COMMA IDENTIFIER

    CLOSE_PARENTHESIS  shift, and go to state 9
    COMMA              shift, and go to state 10


State 9

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS . SEMICOLON bloco DOT

    SEMICOLON  shift, and go to state 11


State 10

   17 lista_idents: lista_idents COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 12


State 11

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON . bloco DOT

    T_BEGIN   reduce using rule 8 (var)
    $default  reduce using rule 6 ($@3)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    var                 go to state 15
    $@3                 go to state 16


State 12

   17 lista_idents: lista_idents COMMA IDENTIFIER .

    $default  reduce using rule 17 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco . DOT

    DOT  shift, and go to state 17


State 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $default  reduce using rule 3 ($@2)

    $@2  go to state 18


State 15

    5 parte_declara_vars: var .

    $default  reduce using rule 5 (parte_declara_vars)


State 16

    7 var: $@3 . VAR declara_vars

    VAR  shift, and go to state 19


State 17

    2 programa: $@1 PROGRAM IDENTIFIER OPEN_PARENTHESIS lista_idents CLOSE_PARENTHESIS SEMICOLON bloco DOT .

    $default  reduce using rule 2 (programa)


State 18

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  shift, and go to state 20

    comando_composto  go to state 21


State 19

    7 var: $@3 VAR . declara_vars

    $default  reduce using rule 11 ($@4)

    declara_vars  go to state 22
    declara_var   go to state 23
    $@4           go to state 24


State 20

   19 comando_composto: T_BEGIN . comandos T_END

    $default  reduce using rule 20 (comandos)

    comandos  go to state 25


State 21

    4 bloco: parte_declara_vars $@2 comando_composto .

    $default  reduce using rule 4 (bloco)


State 22

    7 var: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENTIFIER  reduce using rule 11 ($@4)
    $default    reduce using rule 7 (var)

    declara_var  go to state 26
    $@4          go to state 24


State 23

   10 declara_vars: declara_var .

    $default  reduce using rule 10 (declara_vars)


State 24

   13 declara_var: $@4 . lista_id_var COLON tipo $@5 SEMICOLON

    IDENTIFIER  shift, and go to state 27

    lista_id_var  go to state 28


State 25

   19 comando_composto: T_BEGIN comandos . T_END

    T_END  shift, and go to state 29


State 26

    9 declara_vars: declara_vars declara_var .

    $default  reduce using rule 9 (declara_vars)


State 27

   16 lista_id_var: IDENTIFIER .

    $default  reduce using rule 16 (lista_id_var)


State 28

   13 declara_var: $@4 lista_id_var . COLON tipo $@5 SEMICOLON
   15 lista_id_var: lista_id_var . COMMA IDENTIFIER

    COMMA  shift, and go to state 30
    COLON  shift, and go to state 31


State 29

   19 comando_composto: T_BEGIN comandos T_END .

    $default  reduce using rule 19 (comando_composto)


State 30

   15 lista_id_var: lista_id_var COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 32


State 31

   13 declara_var: $@4 lista_id_var COLON . tipo $@5 SEMICOLON

    IDENTIFIER  shift, and go to state 33

    tipo  go to state 34


State 32

   15 lista_id_var: lista_id_var COMMA IDENTIFIER .

    $default  reduce using rule 15 (lista_id_var)


State 33

   14 tipo: IDENTIFIER .

    $default  reduce using rule 14 (tipo)


State 34

   13 declara_var: $@4 lista_id_var COLON tipo . $@5 SEMICOLON

    $default  reduce using rule 12 ($@5)

    $@5  go to state 35


State 35

   13 declara_var: $@4 lista_id_var COLON tipo $@5 . SEMICOLON

    SEMICOLON  shift, and go to state 36


State 36

   13 declara_var: $@4 lista_id_var COLON tipo $@5 SEMICOLON .

    $default  reduce using rule 13 (declara_var)
